--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,18 @@
     </li>
   </ul>
 
+  <div>
+    <h2>Actualizar Usuario</h2>
+    <form (submit)="updateUser()">
+      <label for="nombre">Nombre</label>
+      <input type="text" id="name" [(ngModel)]="userData.name">
+      <label for="email">Email</label>
+      <input type="email" id="email" [(ngModel)]="userData.email">
+      <button type="submit">Actualizar</button>
+    </form>
+  </div>
+  
+
   <hr>
   <h2 class="mt-4">Agregar Usuario</h2>
   <form (ngSubmit)="agregarUsuario()">
